objects/SpaceProduct__c.object
<CustomObject>
    <description>&lt;SPP&gt; - Represents a products delated to the Space where Space product values is different to property. This caters for space level outgoings eg. Council rates, Air Con</description>
    <fields>
        <fullName>Active__c</fullName>
        <description>Confirms that the Space Product can currently be used. This field is driven by the effective dates defined for this space product.</description>
        <formula>IF(ISBLANK(EffectiveToDate__c), 
IF(EffectiveFromDate__c &lt;= TODAY(),TRUE,FALSE), 
(AND(EffectiveFromDate__c &lt;= TODAY(), 
TODAY() &lt;= EffectiveToDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Confirms that the Space Product can currently be used. This field is driven by the effective dates defined for this space product.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CalculationMethod__c</fullName>
        <description>Drives the price calculation.</description>
        <label>Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>PSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Describes the product / service.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EffectiveFromDate__c</fullName>
        <description>The Date from which this Product becomes or became available for use for any Opportunity related to the Space.</description>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EffectiveToDate__c</fullName>
        <description>The Date until which this Product was or will remain available for use for any Opportunity related to the Space.</description>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>Store the applicable percentage value if the price is calculated based on a percentage (based on the selected &quot;Calculation Method&quot;)</description>
        <inlineHelpText>Provide a percentage if the calculation method is percentage.</inlineHelpText>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <description>The selected Product&apos;s Family. Note: This field has been created as a picklist rather than a formula, to allow using roll-up summary fields in the future.</description>
        <inlineHelpText>The selected Product&apos;s Family.</inlineHelpText>
        <label>Product Family</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProductFamily</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product used for this Space Product.</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can select only recoveries product.</errorMessage>
            <filterItems>
                <field>Product2.BillCode__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Product2.Family</field>
                <operation>equals</operation>
                <value>Recoveries</value>
            </filterItems>
            <filterItems>
                <field>Product2.EffectiveFromDate__c</field>
                <operation>notEqual</operation>
                <value>1/1/2018</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Space Products</relationshipLabel>
        <relationshipName>Space_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <description>The Property to which this Space Product applies. This field is defaulted based on the selected Space.</description>
        <formula>Space__r.Property__r.Name</formula>
        <label>Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPrice__c</fullName>
        <description>The Unit Price applying to the Product for this Space. The Sales Price is applied based on the Calculation Method and does not apply for Percentage calculations.</description>
        <inlineHelpText>Provide a dollar ($) psm amount if calculation method is PSM.</inlineHelpText>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <description>The Space to which the Space Product applies.</description>
        <label>Space</label>
        <referenceTo>Space__c</referenceTo>
        <relationshipLabel>Space Products</relationshipLabel>
        <relationshipName>SpaceProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <label>Tech DMXREF Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Space Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Property__c</columns>
        <columns>Space__c</columns>
        <columns>NAME</columns>
        <columns>CalculationMethod__c</columns>
        <columns>Product__c</columns>
        <columns>ProductFamily__c</columns>
        <columns>SalesPrice__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Warringah Mall</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SPP - {0000}</displayFormat>
        <label>Space Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Space Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SP_PercentageCheck</fullName>
        <active>true</active>
        <description>Percentage value Cannot be empty for Percentage calculation method.</description>
        <errorConditionFormula>AND(ISPICKVAL(CalculationMethod__c,&apos;Percentage&apos;),ISBLANK(Percentage__c))</errorConditionFormula>
        <errorDisplayField>Percentage__c</errorDisplayField>
        <errorMessage>Percentage value Cannot be empty for Percentage calculation method.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SP_SalesPriceCheck</fullName>
        <active>true</active>
        <description>Salesprice Cannot be empty for PSM and Fixed calculation method.</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(CalculationMethod__c,&apos;PSM&apos;),ISPICKVAL(CalculationMethod__c,&apos;Fixed&apos;)),ISBLANK(SalesPrice__c))</errorConditionFormula>
        <errorDisplayField>SalesPrice__c</errorDisplayField>
        <errorMessage>Sales Price Cannot be empty for PSM and Fixed calculation method.</errorMessage>
    </validationRules>
</CustomObject>